--- a/src/frontend/docker/Dockerfile
+++ b/src/frontend/docker/Dockerfile
@@ -1,5 +1,10 @@
 
 FROM nginx:stable-alpine
 
-COPY docker/nginx.conf /etc/nginx/nginx.conf
+
+COPY docker/server.nginx.conf /etc/nginx/conf.d/default.conf
 COPY html /usr/share/nginx/html
+
+EXPOSE 80
+
+# CMD ["nginx", "-g", "daemon off;"]
