--- a/src/frontend/docker/server.nginx.conf
+++ b/src/frontend/docker/server.nginx.conf
@@ -1,15 +1,20 @@
 
+events {
+    worker_connections  1024;
+}
+
+http {
 server {
     listen       80;
-    listen  [::]:80;
-    server_name  webgraph-openapi-frontend;
+    # server_name  webgraph-openapi-frontend;
 
     location / {
         root   /usr/share/nginx/html;
-        index  index.html index.htm;
+        index  index.html;
     }
 
     location /webgraph-api/ {
         proxy_pass http://webgraph-openapi-backend:8000;
     }
+}
 }
