--- a/src/frontend/docker/server.nginx.conf
+++ b/src/frontend/docker/server.nginx.conf
@@ -1,12 +1,7 @@
 
-events {
-    worker_connections  1024;
-}
-
-http {
 server {
     listen       80;
-    # server_name  webgraph-openapi-frontend;
+    server_name  webgraph-openapi-frontend;
 
     location / {
         root   /usr/share/nginx/html;
@@ -16,5 +11,4 @@ server {
     location /webgraph-api/ {
         proxy_pass http://webgraph-openapi-backend:8000;
     }
-}
 }
