--- a/src/frontend/docker/Dockerfile
+++ b/src/frontend/docker/Dockerfile
@@ -2,8 +2,7 @@
 FROM nginx:alpine
 
 
-#COPY docker/server.nginx.conf /etc/nginx/conf.d/default.conf
-COPY docker/server.nginx.conf /etc/nginx/nginx.conf
+COPY docker/server.nginx.conf /etc/nginx/conf.d/default.conf
 COPY html /usr/share/nginx/html
 
 EXPOSE 80
