Attempts to show a graph

--- a/src/docker/compose.yml
+++ b/src/docker/compose.yml
@@ -13,6 +13,8 @@ services:
     volumes:
       - /Users/mn/Developer/working-copies/uni/avgdist-rs/data/star:/usr/webgraphs/star
       - /Volumes/Data/bitcoin:/usr/webgraphs/bitcoin
+      - /home/mn/Developer/working-copies/personal/development-snapshots.sh/working-copies/rust/avgdist-rs/data/star:/usr/webgraphs/star
+      - /home/mn/Downloads/bitcoin-graphs/Bitcoin_Graphs/pg:/usr/webgraphs/pg
 
   webgraph-openapi-frontend:
     build:
