--- a/src/frontend/docker/server.nginx.conf
+++ b/src/frontend/docker/server.nginx.conf
@@ -6,6 +6,7 @@ server {
     location / {
         root   /usr/share/nginx/html;
         index  index.html;
+        # add_header Access-Control-Allow-Origin *;
     }
 
     location /webgraph-api/ {
