--- a/src/docker/Makefile
+++ b/src/docker/Makefile
@@ -1,6 +1,9 @@
 
 run:
-	docker compose up
+	COMPOSE_BAKE=true docker compose up
 
 build:
 	COMPOSE_BAKE=true docker compose build
+
+down:
+	COMPOSE_BAKE=true docker compose down
