--- a/src/docker/compose.yml
+++ b/src/docker/compose.yml
@@ -14,6 +14,7 @@ services:
       - /Users/mn/Developer/working-copies/uni/avgdist-rs/data/star:/usr/webgraphs/star
       - /Volumes/Data/bitcoin:/usr/webgraphs/bitcoin
       - /home/mn/Developer/working-copies/personal/development-snapshots.sh/working-copies/rust/avgdist-rs/data/star:/usr/webgraphs/star
+      - /home/mn/Developer/working-copies/personal/development-snapshots.sh/working-copies/rust/avgdist-rs/data/erdos-renyi:/usr/webgraphs/erdos-renyi
       - /home/mn/Downloads/bitcoin-graphs/Bitcoin_Graphs/pg:/usr/webgraphs/pg
       - /home/mn/Downloads/bitcoin-graphs/Bitcoin_Graphs/ag:/usr/webgraphs/ag
 
