--- a/src/docker/compose.yml
+++ b/src/docker/compose.yml
@@ -15,8 +15,9 @@ services:
       - /Volumes/Data/bitcoin:/usr/webgraphs/bitcoin
       - /home/mn/Developer/working-copies/personal/development-snapshots.sh/working-copies/rust/avgdist-rs/data/star:/usr/webgraphs/star
       - /home/mn/Developer/working-copies/personal/development-snapshots.sh/working-copies/rust/avgdist-rs/data/erdos-renyi:/usr/webgraphs/erdos-renyi
-      - /home/mn/Downloads/bitcoin-graphs/Bitcoin_Graphs/pg:/usr/webgraphs/pg
+      # - /home/mn/Downloads/bitcoin-graphs/Bitcoin_Graphs/pg:/usr/webgraphs/pg
       - /home/mn/Downloads/bitcoin-graphs/Bitcoin_Graphs/ag:/usr/webgraphs/ag
+      - /home/mn/Developer/bitcoin/pg:/usr/webgraphs/pg
 
   webgraph-openapi-frontend:
     build:
