--- a/src/backend/Cargo.toml
+++ b/src/backend/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2024"
 webgraph = { git = "https://github.com/vigna/webgraph-rs" }
 avgdist-rs = { git = "https://github.com/massimo-nocentini/avgdist-rs.git" }
 rayon = "1.10.0"
+rand = "0.9.1"
+time-format = "1.2.1"
 
 [dependencies.rocket]
 version = "0.5.1"
