#8 copy a dummy graph to be used by the new API

--- a/src/backend/docker/Dockerfile
+++ b/src/backend/docker/Dockerfile
@@ -5,6 +5,8 @@ RUN apk add --no-cache musl-dev
 
 COPY ./src /usr/src/backend/src
 
+COPY ./data/erdos-renyi /usr/webgraphs/egonet-erdos-renyi
+
 COPY ./Cargo* /usr/src/backend
 
 WORKDIR /usr/src/backend
