Closes #8: introduce a new rule to use no volumes.

--- a/src/docker/Makefile
+++ b/src/docker/Makefile
@@ -9,3 +9,8 @@ down:
 	COMPOSE_BAKE=true docker compose down
 
 refresh: build up
+
+novolumes:
+	COMPOSE_BAKE=true docker compose -f compose-novolumes.yml down
+	COMPOSE_BAKE=true docker compose -f compose-novolumes.yml build
+	COMPOSE_BAKE=true docker compose -f compose-novolumes.yml up
