Closes #3: it is not necessary to prebuild an image, just let the user wait some minutes in order to have its own copy, freshly compiled.

--- a/src/backend/docker/Dockerfile
+++ b/src/backend/docker/Dockerfile
@@ -1,13 +1,12 @@
 
-FROM rust:1.87-alpine
+FROM rust:alpine
 
 RUN apk add --no-cache musl-dev
 
 COPY ./src /usr/src/backend/src
+COPY ./Cargo* /usr/src/backend
 
 COPY ./data/erdos-renyi /usr/webgraphs/egonet-erdos-renyi
-
-COPY ./Cargo* /usr/src/backend
 
 WORKDIR /usr/src/backend
 
