--- a/src/docker/compose.yml
+++ b/src/docker/compose.yml
@@ -8,6 +8,7 @@ services:
     environment:
       - ROCKET_ADDRESS="0.0.0.0"  # Listen on all interfaces
       - ROCKET_PORT=8000
+      - BASE_MEMSIZE=30
     ports:
       - 8801:8000
     volumes:
