--- a/src/frontend/docker/server.nginx.conf
+++ b/src/frontend/docker/server.nginx.conf
@@ -11,5 +11,6 @@ server {
 
     location /webgraph-api/ {
         proxy_pass http://webgraph-openapi-backend:8000;
+        proxy_read_timeout 1d;
     }
 }
